--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
-export interface Props {
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
+interface Props {
 	title: string;
 }
 
@@ -16,7 +19,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<Header />
+		<main><slot /></main>
+		<Footer />
 	</body>
 </html>
 <style is:global>
@@ -26,10 +31,22 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+	}
+	body {
+		margin: 0;
+		padding: 0;
+		background: #0e172a;
+		color: #cbd5e1;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
+	}
+	h1,
+	h2 {
+		color: white;
+	}
+	p {
+		line-height: 1.65;
 	}
 </style>
