--- a/src/pages/fill.astro
+++ b/src/pages/fill.astro
@@ -17,7 +17,7 @@ import nasaImg from "../assets/nasa.jpg";
 			</p>
 			<p>Each example shows the differences between object-fit properties.</p>
 			<p>
-				Note: Image found in <code class={styles.inlineCode}>/assets/nasa.jpg</code> and sourced via
+				Note: Image found in <code class={styles.inlineCode}>src/assets/nasa.jpg</code> and sourced via
 				Nasa @
 				<a
 					href="https://unsplash.com/photos/yZygONrUBe8"
@@ -96,8 +96,8 @@ import nasaImg from "../assets/nasa.jpg";
 			<Picture
 				alt="The space station above the Earth"
 				src={nasaImg}
-				sizes="100vw"
-				widths={[600, 800]}
+				sizes="2800px"
+				widths={[600, 800, 1400, 2800]}
 				style={{
 					width: "100%",
 					height: "100%",
