--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,12 @@ import astroImg from "../assets/astro.png";
 				>
 					@astrojs/image</a
 				>{" "}
-				component with examples.
+				integration with examples. The source code for all these examples can be found <a
+					href="https://github.com/chrismwilliams/astro-image-examples"
+					target="_blank"
+					rel="noopener noreferrer nofollow"
+					class={styles.inlineLink}>here</a
+				>.
 			</p>
 			<p>
 				Both <code class={styles.inlineCode}>&lt;Image&gt;</code> and <code
@@ -47,8 +52,11 @@ import astroImg from "../assets/astro.png";
 			<h2 id="internal">Internal Image</h2>
 			<p>
 				Here is an example using an internal image, the location of which can be found in {" "}
-				<code class={styles.inlineCode}>src/assets</code>, and the source found <a
+				<code class={styles.inlineCode}>src/assets</code>, and the image source found <a
 					href="https://astro.build/press/"
+					target="_blank"
+					rel="noopener noreferrer nofollow"
+					class={styles.inlineLink}
 				>
 					here</a
 				>.
