--- a/src/pages/responsive.astro
+++ b/src/pages/responsive.astro
@@ -12,7 +12,8 @@ import nasaImg from "../assets/nasa.jpg";
 		<div class={styles.card}>
 			<h1 class={styles.heading}>Layout Responsive Example</h1>
 			<p>
-				Image found in <code class={styles.inlineCode}>/assets/nasa.jpg</code> and sourced via Nasa @
+				Image found in <code class={styles.inlineCode}>src/assets/nasa.jpg</code> and sourced via Nasa
+				@
 				<a
 					href="https://unsplash.com/photos/yZygONrUBe8"
 					target="_blank"
