--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,11 @@ const { title } = Astro.props;
 		--accent: 124, 58, 237;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
 	}
+	*,
+	:after,
+	:before {
+		box-sizing: border-box;
+	}
 	html {
 		font-family: system-ui, sans-serif;
 	}
