--- a/src/pages/background.astro
+++ b/src/pages/background.astro
@@ -12,7 +12,8 @@ import ImageLabel from "../components/ImageLabel.astro";
 		<div class={styles.card}>
 			<h1 class={styles.heading}>Background Image Example</h1>
 			<p>
-				Image found in <code class={styles.inlineCode}>/assets/nasa.jpg</code> and sourced via Nasa @
+				Image found in <code class={styles.inlineCode}>src/assets/nasa.jpg</code> and sourced via Nasa
+				@
 				<a
 					href="https://unsplash.com/photos/yZygONrUBe8"
 					target="_blank"
