add margin to text wrapper

--- a/src/pages/background.astro
+++ b/src/pages/background.astro
@@ -78,6 +78,7 @@ import ImageLabel from "../components/ImageLabel.astro";
 	.background-content {
 		place-self: center;
 		text-align: center;
+		margin: 0 1rem;
 		padding: 1rem;
 		background-color: rgb(88 28 135 / 0.75);
 		border: 1px solid rgb(168 85 247);
