--- a/src/pages/background.astro
+++ b/src/pages/background.astro
@@ -1,93 +1,50 @@
 ---
+import { Code } from "astro-expressive-code/components";
 import Layout from "../layouts/Layout.astro";
-import { Image, Picture } from "@astrojs/image/components";
-import styles from "../styles.module.css";
+import Tabs from "../components/Tabs.astro";
+import TabItem from "../components/TabItem.astro";
 
-import nasaImg from "../assets/nasa.jpg";
-import ImageLabel from "../components/ImageLabel.astro";
+import BackgroundImage from "../components/background/ImageExample.astro";
+import BackgroundImageCode from "../components/background/ImageExample.astro?raw";
+import BackgroundPicture from "../components/background/PictureExample.astro";
+import BackgroundPictureCode from "../components/background/PictureExample.astro?raw";
 ---
 
-<Layout title="Background Astro Image Example.">
-	<div class={styles.container}>
-		<div class={styles.card}>
-			<h1 class={styles.heading}>Background Image Example</h1>
-			<p>
-				Image found in <code class={styles.inlineCode}>src/assets/nasa.jpg</code> and sourced via Nasa
-				@
-				<a
-					href="https://unsplash.com/photos/yZygONrUBe8"
-					target="_blank"
-					rel="noopener noreferrer nofollow"
-					class={styles.inlineLink}>unsplash.com</a
-				>
-			</p>
-		</div>
-		<br />
-		<br />
-		<br />
-		<ImageLabel text="<Image>" />
-		<div class="background-wrapper">
-			<Image
-				alt="The space station above the Earth"
-				src={nasaImg}
-				style={{
-					objectFit: "cover",
-					height: "min(60vh, 600px)",
-					width: "100%",
-				}}
-			/>
-			<div class="background-content test">
-				<h2>Overly text on an image background</h2>
-			</div>
-		</div>
-		<br />
-		<br />
-		<br />
-		<ImageLabel text="<Picture>" />
-		<div class="background-wrapper">
-			<div>
-				<Picture
-					alt="The space station above the Earth"
-					src={nasaImg}
-					sizes="100vw"
-					widths={[800, 1200, 2800]}
-					style={{
-						objectFit: "cover",
-						height: "min(60vh, 600px)",
-						width: "100%",
-					}}
-				/>
-			</div>
-			<div class="background-content"><h2>Overly text on an image background</h2></div>
-		</div>
-	</div>
+<Layout title="Astro Image Examples - Background">
+  <div class="container">
+    <div class="card">
+      <h1 class="heading">Background Examples.</h1>
+      <p>
+        Image found in <code class="inlineCode">src/assets/nasa.jpg</code> and sourced via Nasa @
+        <a
+          href="https://unsplash.com/photos/yZygONrUBe8"
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+          class="inlineLink">unsplash.com</a
+        >
+      </p>
+    </div>
+    <br />
+    <br />
+    <br />
+    <Tabs>
+      <TabItem name="background-image" label="<Image>" open>
+        <BackgroundImage />
+      </TabItem>
+      <TabItem name="background-image" label="<Code>">
+        <Code code={BackgroundImageCode} lang="astro" title="background-image.astro" />
+      </TabItem>
+    </Tabs>
+    <br />
+    <br />
+    <br />
+    <Tabs>
+      <TabItem name="background-picture" label="<Picture>" open>
+        <BackgroundPicture />
+      </TabItem>
+      <TabItem name="background-picture" label="<Code>">
+        <Code code={BackgroundPictureCode} lang="astro" title="background-picture.astro" />
+      </TabItem>
+    </Tabs>
+  </div>
 </Layout>
-
-<style>
-	.background-wrapper {
-		display: grid;
-		grid-template-areas: "stack";
-	}
-	.background-wrapper :global(img, picture) {
-		display: block;
-	}
-	/* Issue with the picture element [astro #5476], hence adding a parent div */
-	.background-wrapper > * {
-		grid-area: stack;
-	}
-	.background-content {
-		place-self: center;
-		text-align: center;
-		margin: 0 1rem;
-		padding: 1rem;
-		background-color: rgb(88 28 135 / 0.75);
-		border: 1px solid rgb(168 85 247);
-		border-radius: 0.25rem;
-		box-shadow: 0px -3px 18px rgb(168 85 247 / 50%);
-	}
-	.background-content h2 {
-		text-transform: capitalize;
-		font-size: clamp(1.35rem, 5vw, 2rem);
-		line-height: 1.3;
-	}
-</style>
