--- a/src/components/stack/PictureExample.astro
+++ b/src/components/stack/PictureExample.astro
@@ -4,7 +4,7 @@ import { Picture } from "astro:assets";
 import nasaImg from "../../assets/nasa.jpg";
 ---
 
-<div class="background-wrapper">
+<div class="wrapper">
   <Picture
     alt="The space station above the Earth"
     src={nasaImg}
@@ -13,11 +13,11 @@ import nasaImg from "../../assets/nasa.jpg";
     formats={["avif", "webp"]}
     pictureAttributes={{ style: "grid-area: stack;" }}
   />
-  <div class="background-content"><h2>Overly text on an image background</h2></div>
+  <div class="content"><h2>Overly text on Picture</h2></div>
 </div>
 
 <style>
-  .background-wrapper {
+  .wrapper {
     display: grid;
     grid-template-areas: "stack";
   }
@@ -29,11 +29,11 @@ import nasaImg from "../../assets/nasa.jpg";
     height: auto;
   }
 
-  .background-wrapper > * {
+  .wrapper > * {
     grid-area: stack;
   }
 
-  .background-content {
+  .content {
     place-self: center;
     text-align: center;
     margin-inline: 1rem;
@@ -44,7 +44,7 @@ import nasaImg from "../../assets/nasa.jpg";
     box-shadow: 0px -3px 18px rgb(168 85 247 / 50%);
   }
 
-  .background-content h2 {
+  .content h2 {
     text-transform: capitalize;
     font-size: clamp(1.35rem, 5vw, 2rem);
     line-height: 1.3;
