update responsive examples

--- a/src/pages/stack.astro
+++ b/src/pages/stack.astro
@@ -28,22 +28,22 @@ import StackPictureCode from "../components/stack/PictureExample.astro?raw";
     <br />
     <br />
     <Tabs>
-      <TabItem name="background-image" label="<Image>" open>
+      <TabItem name="stack-image" label="<Image>" open>
         <StackImage />
       </TabItem>
-      <TabItem name="background-image" label="<Code>">
-        <Code code={StackImageCode} lang="astro" title="background-image.astro" />
+      <TabItem name="stack-image" label="<Code>">
+        <Code code={StackImageCode} lang="astro" title="stack-image.astro" />
       </TabItem>
     </Tabs>
     <br />
     <br />
     <br />
     <Tabs>
-      <TabItem name="background-picture" label="<Picture>" open>
+      <TabItem name="stack-picture" label="<Picture>" open>
         <StackPicture />
       </TabItem>
-      <TabItem name="background-picture" label="<Code>">
-        <Code code={StackPictureCode} lang="astro" title="background-picture.astro" />
+      <TabItem name="stack-picture" label="<Code>">
+        <Code code={StackPictureCode} lang="astro" title="stack-picture.astro" />
       </TabItem>
     </Tabs>
   </div>
