fix the styles for layout components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,10 @@
----
-import styles from "../styles.module.css";
----
-
-<div>
+<footer>
 	<p>
 		Inspired by <a
 			href="https://image-component.nextjs.gallery/"
 			target="_blank"
 			rel="noopener noreferrer nofollow"
-			class={styles.inlineLink}>Vercel Image Component</a
+			class="inlineLink">Vercel Image Component</a
 		>
 	</p>
 	<p>
@@ -16,13 +12,13 @@ import styles from "../styles.module.css";
 			href="https://github.com/chrismwilliams"
 			target="_blank"
 			rel="noopener noreferrer nofollow"
-			class={styles.inlineLink}>Chris Williams</a
+			class="inlineLink">Chris Williams</a
 		>
 	</p>
-</div>
+</footer>
 
 <style>
-	div {
+	footer {
 		padding: 2.5rem 0;
 		display: grid;
 		gap: 0.5rem;
