add local and remote examples

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,122 +1,116 @@
 ---
+import { Code } from "astro-expressive-code/components";
 import Layout from "../layouts/Layout.astro";
-import styles from "../styles.module.css";
+import Tabs from "../components/Tabs.astro";
+import TabItem from "../components/TabItem.astro";
 
-import { Image, Picture } from "@astrojs/image/components";
-import ImageLabel from "../components/ImageLabel.astro";
-import astroImg from "../assets/astro.png";
+import LocalImage from "../components/local/ImageExample.astro";
+import localImageCode from "../components/local/ImageExample.astro?raw";
+import LocalPicture from "../components/local/PictureExample.astro";
+import localPictureCode from "../components/local/PictureExample.astro?raw";
+
+import RemoteImage from "../components/remote/ImageExample.astro";
+import remoteImageCode from "../components/remote/ImageExample.astro?raw";
+import RemotePicture from "../components/remote/PictureExample.astro";
+import remotePictureCode from "../components/remote/PictureExample.astro?raw";
 ---
 
-<Layout title="Welcome to Astro Image Component.">
-	<div class={styles.container}>
-		<div class={styles.card}>
-			<h1 class={styles.heading}>
-				<span class={styles.textGradient}>@astrojs</span>/image examples
-			</h1>
-			<p>
-				This page demonstrates the usage of the{" "}
-				<a
-					target="_blank"
-					rel="noopener noreferrer nofollow"
-					href="https://docs.astro.build/en/guides/integrations-guide/image/"
-					class={styles.inlineLink}
-				>
-					@astrojs/image</a
-				>{" "}
-				integration with examples. The source code for all these examples can be found <a
-					href="https://github.com/chrismwilliams/astro-image-examples"
-					target="_blank"
-					rel="noopener noreferrer nofollow"
-					class={styles.inlineLink}>here</a
-				>.
-			</p>
-			<p>
-				Both <code class={styles.inlineCode}>&lt;Image&gt;</code> and <code
-					class={styles.inlineCode}>&lt;Picture&gt;</code
-				> components are designed to{" "}
-				<a
-					href="https://docs.astro.build/en/guides/integrations-guide/image/#why-astrojsimage"
-					target="_blank"
-					rel="noopener noreferrer nofollow"
-					class={styles.inlineLink}
-				>
-					automatically optimize</a
-				>{" "}
-				images on-demand as the browser requests them.
-			</p>
-			<p>
-				Note: Images placed in <code class={styles.inlineCode}>/public</code> can still be used with
-				both components, an unprocessed copy of the original image will be moved to the build folder
-			</p>
-			<hr class={styles.hr} />
-			<h2 id="internal">Internal Image</h2>
-			<p>
-				Here is an example using an internal image, the location of which can be found in {" "}
-				<code class={styles.inlineCode}>src/assets</code>, and the image source found <a
-					href="https://astro.build/press/"
-					target="_blank"
-					rel="noopener noreferrer nofollow"
-					class={styles.inlineLink}
-				>
-					here</a
-				>.
-			</p>
-			<ImageLabel text="<Image>" />
-			<Image
-				alt="Astro logo"
-				src={astroImg}
-				style={{
-					maxWidth: "100%",
-					height: "auto",
-				}}
-			/>
-			<br />
-			<br />
-			<br />
-			<ImageLabel text="<Picture>" />
-			<Picture
-				alt="Astro logo"
-				src={astroImg}
-				sizes="100vw"
-				widths={[960, 1600]}
-				style={{ maxWidth: "100%" }}
-			/>
-			<hr class={styles.hr} />
-			<h2 id="external">External Image</h2>
-			<p>
-				The following is an example of a reference to an external image found @{" "}
-				<a
-					href="https://astro.build/press/"
-					target="_blank"
-					rel="noopener noreferrer nofollow"
-					class={styles.inlineLink}
-				>
-					astro.build/press</a
-				>.
-			</p>
-			<ImageLabel text="<Image>" />
-			<Image
-				alt="Astro logo"
-				src="https://astro.build/assets/press/full-logo-dark.png"
-				width={1517}
-				height={500}
-				style={{
-					width: "100%",
-					height: "auto",
-				}}
-			/>
-			<br />
-			<br />
-			<br />
-			<ImageLabel text="<Picture>" />
-			<Picture
-				alt="Astro logo"
-				src="https://astro.build/assets/press/full-logo-dark.png"
-				sizes="100vw"
-				widths={[960, 1517]}
-				aspectRatio={1517 / 500}
-				style={{ width: "100%" }}
-			/>
-		</div>
-	</div>
+<Layout title="Welcome to Astro Image Examples.">
+  <div class="container">
+    <div class="card">
+      <h1 class="heading">
+        <span class="textGradient">Astro</span> image examples
+      </h1>
+      <p>
+        This page demonstrates the usage of the Astro{" "}
+        <a
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+          href="https://docs.astro.build/en/guides/images/#image--astroassets"
+          class="inlineLink"
+        >
+          <code>&lt;Image&gt;</code></a
+        >{" "} & <a
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+          href="https://docs.astro.build/en/guides/images/#picture-"
+          class="inlineLink"><code>&lt;Picture&gt;</code></a
+        >
+        components with examples. The source code for all these examples can be found <a
+          href="https://github.com/chrismwilliams/astro-image-examples"
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+          class="inlineLink">here</a
+        >.
+      </p>
+      <p>
+        Note: Images placed in <code class="inlineCode">/public</code> can still be used with both components,
+        an unprocessed copy of the original image will be moved to the build folder.
+      </p>
+      <hr class="hr" />
+      <h2 id="internal">Local Image.</h2>
+      <p>
+        Here is an example using a local image, the location of which can be found in {" "}
+        <code class="inlineCode">src/assets</code>, and the image source found <a
+          href="https://astro.build/press/"
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+          class="inlineLink"
+        >
+          here</a
+        >.
+      </p>
+      <Tabs>
+        <TabItem name="internal-image" label="<Image>" open>
+          <LocalImage />
+        </TabItem>
+        <TabItem name="internal-image" label="<Code>">
+          <Code code={localImageCode} lang="astro" title="local-image.astro" />
+        </TabItem>
+      </Tabs>
+      <br />
+      <br />
+      <br />
+      <Tabs>
+        <TabItem name="internal-picture" label="<Picture>" open>
+          <LocalPicture />
+        </TabItem>
+        <TabItem name="internal-picture" label="<Code>">
+          <Code code={localPictureCode} lang="astro" title="local-picture.astro" />
+        </TabItem>
+      </Tabs>
+      <hr class="hr" />
+      <h2 id="external">External Image.</h2>
+      <p>
+        The following is an example of a reference to an external image found @{" "}
+        <a
+          href="https://astro.build/press/"
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+          class="inlineLink"
+        >
+          astro.build/press</a
+        >.
+      </p>
+      <Tabs>
+        <TabItem name="remote-image" label="<Image>" open>
+          <RemoteImage />
+        </TabItem>
+        <TabItem name="remote-image" label="<Code>">
+          <Code code={remoteImageCode} lang="astro" title="remote-image.astro" />
+        </TabItem>
+      </Tabs>
+      <br />
+      <br />
+      <br />
+      <Tabs>
+        <TabItem name="remote-picture" label="<Picture>" open>
+          <RemotePicture />
+        </TabItem>
+        <TabItem name="remote-picture" label="<Code>">
+          <Code code={remotePictureCode} lang="astro" title="remote-picture.astro" />
+        </TabItem>
+      </Tabs>
+    </div>
+  </div>
 </Layout>
