--- a/src/components/stack/PictureExample.astro
+++ b/src/components/stack/PictureExample.astro
@@ -24,7 +24,7 @@ import nasaImg from "../../assets/nasa.jpg";
   img {
     display: block;
     object-fit: cover;
-    max-width: 100%;
+    width: 100%;
     height: auto;
   }
 
