--- a/src/pages/responsive.astro
+++ b/src/pages/responsive.astro
@@ -32,7 +32,7 @@ import responsivePictureCode from "../components/responsive/PictureExample.astro
         <ResponsiveImage />
       </TabItem>
       <TabItem name="responsive-image" label="<Code>">
-        <Code code={responsiveImageCode} lang="astro" title="responsive-image.astro" />
+        <Code code={responsiveImageCode} lang="astro" />
       </TabItem>
     </Tabs>
     <br />
@@ -43,7 +43,7 @@ import responsivePictureCode from "../components/responsive/PictureExample.astro
         <ResponsivePicture />
       </TabItem>
       <TabItem name="responsive-picture" label="<Code>">
-        <Code code={responsivePictureCode} lang="astro" title="responsive-picture.astro" />
+        <Code code={responsivePictureCode} lang="astro" />
       </TabItem>
     </Tabs>
   </div>
