--- a/src/pages/stack.astro
+++ b/src/pages/stack.astro
@@ -32,7 +32,7 @@ import StackPictureCode from "../components/stack/PictureExample.astro?raw";
         <StackImage />
       </TabItem>
       <TabItem name="stack-image" label="<Code>">
-        <Code code={StackImageCode} lang="astro" title="stack-image.astro" />
+        <Code code={StackImageCode} lang="astro" />
       </TabItem>
     </Tabs>
     <br />
@@ -43,7 +43,7 @@ import StackPictureCode from "../components/stack/PictureExample.astro?raw";
         <StackPicture />
       </TabItem>
       <TabItem name="stack-picture" label="<Code>">
-        <Code code={StackPictureCode} lang="astro" title="stack-picture.astro" />
+        <Code code={StackPictureCode} lang="astro" />
       </TabItem>
     </Tabs>
   </div>
