add comment, increase content padding

--- a/src/components/local/ImageExample.astro
+++ b/src/components/local/ImageExample.astro
@@ -7,9 +7,10 @@ import astroImg from "../../assets/astro-logo.png";
 <Image alt="Astro logo" src={astroImg} />
 
 <style>
+  /* Make images easier to work with */
   img {
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: auto;
   }
 </style>
