--- a/src/components/stack/ImageExample.astro
+++ b/src/components/stack/ImageExample.astro
@@ -17,11 +17,12 @@ import nasaImg from "../../assets/nasa.jpg";
     grid-template-areas: "stack";
   }
 
+  /* Make images easier to work with */
   img {
     display: block;
-    object-fit: cover;
     max-width: 100%;
     height: auto;
+    object-fit: cover;
   }
 
   .wrapper > * {
@@ -32,7 +33,7 @@ import nasaImg from "../../assets/nasa.jpg";
     place-self: center;
     text-align: center;
     margin-inline: 1rem;
-    padding: 1rem;
+    padding: 2rem;
     background-color: rgb(88 28 135 / 0.75);
     border: 1px solid var(--color-primary);
     border-radius: 0.25rem;
