--- a/src/components/local/PictureExample.astro
+++ b/src/components/local/PictureExample.astro
@@ -7,9 +7,10 @@ import astroImg from "../../assets/astro-logo.png";
 <Picture alt="Astro logo" src={astroImg} widths={[astroImg.width / 2, astroImg.width]} />
 
 <style>
+  /* Make images easier to work with */
   img {
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: auto;
   }
 </style>
