--- a/src/components/remote/PictureExample.astro
+++ b/src/components/remote/PictureExample.astro
@@ -9,9 +9,10 @@ import { Picture } from "astro:assets";
 />
 
 <style>
+  /* Make images easier to work with */
   img {
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: auto;
   }
 </style>
