--- a/src/components/responsive/ImageExample.astro
+++ b/src/components/responsive/ImageExample.astro
@@ -7,9 +7,10 @@ import nasaImg from "../../assets/nasa.jpg";
 <Image alt="The space station above the Earth" src={nasaImg} />
 
 <style>
+  /* Make images easier to work with */
   img {
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: auto;
   }
 </style>
