--- a/src/components/responsive/PictureExample.astro
+++ b/src/components/responsive/PictureExample.astro
@@ -12,8 +12,10 @@ import nasaImg from "../../assets/nasa.jpg";
 />
 
 <style>
+  /* Make images easier to work with */
   img {
     display: block;
+    max-width: 100%;
     width: 100%;
     height: auto;
   }
